<resources>
    <string name="app_name">Digital Campus</string>
    <string name="title_activity_login">Log In</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <!-- User login data -->
    <string name="user_email">administrador@salleurl.edu</string>
    <string name="user_password">123qwe</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="auth">Autenticación</string>
    <string name="em">Email</string>
    <string name="pass">Contraseña</string>
    <string name="log">Entra</string>
    <string name="wrong_email">Email incorrecto</string>
    <string name="wrong_pass">Contraseña incorrecta</string>
    <!--Menu principal-->
    <string name="manageSubjects">Gestionar Asignaturas</string>
    <string name="manageStudents">Gestionar Alumnado</string>
    <string name="manageExams">Exámenes</string>
    <string name="sign_out">Salir</string>
    <!-- Opciones menu actionbar -->
    <string name="nuevoEstudiante">Crear Alumno</string>
    <string name="nuevaAsignatura">Crear Asignatura</string>
    <string name="nuevoExamen">Nuevo Examen</string>
    <string name="salir">Salir</string>
    <!--Iconos/FA-->
    <string name="subject">&#xf02d;</string>
    <string name="student">&#xf0c0;</string>
    <string name="exam">&#xf0f6;</string>
    <string name="logout">&#xf08b;</string>
    <string name="trash">&#xf014;</string>
    <string name="add">&#xf196;</string>
    <!--Gestion de asignaturas-->
    <string name="subjects">Asignaturas</string>
    <string name="info">Informacion Basica</string>
    <string name="sbst">Alumnos inscritos</string>
    <string name="themes">Temario</string>
    <string name="sbview">Ver asignatura</string>
    <string name="subjectMenu">Gestion asignaturas</string>
    <string name="addElement">Nuevo Elemento</string>
    <string name="sbform">Nueva Asignatura</string>
    <string name="selectSubject">Selecciona una asignatura</string>
    <!--Gestion de alumnos-->
    <string name="students">alumnos</string>
    <string name="stview">Ver Alumno</string>
    <string name="stform">Nuevo alumno</string>
    <string name="selectStudent">Selecciona un alumno</string>
    <string name="studentMenu">Gestion alumnos</string>
    <string name="addStudent">Nuevo Alumno</string>
    <string name="stname">Nombre y apellidos</string>
    <string name="stbirth">Fecha de nacimiento</string>
    <string name="stdeg"> Carrera:</string>
    <string name="strgGen">Sexo:</string>
    <string name="strphoto">Foto:</string>
    <string name="stselectphoto">Seleccionar</string>
    <string name="strcreate">Añadir</string>
    <string name="M">Hombre</string>
    <string name="W">Mujer</string>
    <string name="O">Otro</string>
    <!--Arrays-->
    <string-array name="degrees">
        <item>Selecciona un grado</item>
        <item>Informatica</item>
        <item>Telecomunicaciones</item>
        <item>Electronica</item>
        <item>A.D.E.</item>
        <item>Animacion</item>
        <item>Multimedia</item>
    </string-array>
    <string-array name="subjects">
        <item>Selecciona una asignatura</item>
        <item>Fotografia</item>
        <item>Android</item>
        <item>D.P.O.O</item>
        <item>Fotografia</item>
        <item>Bases de datos</item>
        <item>Programacion I</item>
    </string-array>
    <string-array name="rooms">
        <item>Selecciona un aula</item>
        <item>Aula 1</item>
        <item>Aula 2</item>
        <item>Aula 3</item>
        <item>Aula 4</item>
        <item>Aula 5</item>
    </string-array>
    <!--Gestion  de examenes-->
    <string name="examMenu">Listado examenes</string>
    <string name="addExam">Nuevo Examen</string>
    <string name="exform">Nuevo Examen</string>
    <string name="exedit">Editar Examen</string>
    <string name="ex_datetag">Fecha de examen</string>
    <string name="ex_hourtag">Hora de examen</string>
    <string name="exsubj">Asignatura:</string>
    <string name="exroom">Aula:</string>
</resources>
