<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.AddEditExam">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                >
                <EditText
                    android:id="@+id/ex_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ex_datetag"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                >
                <EditText
                    android:id="@+id/ex_hour_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ex_hourtag"
                    />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/ex_deg_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_centerVertical="true"
                    android:text="@string/stdeg"
                    android:textSize="18.5sp"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@id/ex_deg_input"
                    android:layout_height="50dp"
                    android:textAlignment="viewEnd"
                    android:gravity="fill_horizontal"
                    android:id="@+id/ex_degree_spinner"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/ex_subj_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_centerVertical="true"
                    android:text="@string/exsubj"
                    android:textSize="18.5sp"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@id/ex_subj_input"
                    android:layout_height="50dp"
                    android:textAlignment="viewEnd"
                    android:gravity="fill_horizontal"
                    android:id="@+id/ex_subj_spinner"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/ex_room_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_centerVertical="true"
                    android:text="@string/exroom"
                    android:textSize="18.5sp"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@id/ex_room_input"
                    android:layout_height="50dp"
                    android:textAlignment="viewEnd"
                    android:gravity="fill_horizontal"
                    android:id="@+id/ex_room_spinner"/>
            </RelativeLayout>
            <Button
                android:id="@+id/createExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="bottom"
                android:text="@string/strcreate"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
