<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Actividades.Views.ViewSubject">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/sbscroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"/>
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sbtitle"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/sbdesc"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:text="@string/themes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"/>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/sb_themeList"
                    android:layout_width="match_parent"
                    android:textSize="17sp"
                    android:layout_height="wrap_content"></TextView>
                <TextView
                    android:text="@string/sbst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:id="@+id/vsb_students"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
